--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 </head>
 
 <body>
-
     <header>
         <div class="header-text">
             <div class="header-logo">
                 <h1>UNDER</h1>
             </div>
             <div class="header-defenition">
-                <h3>турагентство подземных путешествий</h3>
+                <h3>турагентство<br> подземных<br> путешествий</h3>
             </div>
         </div>
     </header>
